--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="create-react-app으로 만든 포트폴리오 사이트입니다." />
     <!-- <meta
       http-equiv="Content-Security-Policy"
       content="upgrade-insecure-requests"
@@ -25,10 +25,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>JongHak's Portfolio</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>이 사이트를 열람하기 위해서는 자바스크립트 설치가 필요합니다.</noscript>
     <div id="root"></div>
     <div id="modal-root"></div>
     <!-- 추가 됨 -->
