--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,10 +25,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>JongHak's Portfolio</title>
+    <title>JongHak's Resume</title>
   </head>
   <body>
-    <noscript>이 사이트를 열람하기 위해서는 자바스크립트 설치가 필요합니다.</noscript>
+    <noscript>이 사이트를 열람하기 위해서는 자바스크립트 설치가 필요합니다. 크롬에 최적화 되어 있습니다.</noscript>
     <div id="root"></div>
     <div id="modal-root"></div>
     <!-- 추가 됨 -->
